--- a/sites/all/themes/nexus/style.css
+++ b/sites/all/themes/nexus/style.css
@@ -1162,6 +1162,11 @@ border-left: 1px solid; border-right: 1px solid; height: 40px; margin-left: -36p
 
 /*Custom CSS*/
 
+@font-face {
+  font-family: harry-potter;
+  src: url(fonts/harry-potter.TTF);
+}
+
 h1#site-title a:link, h1#site-title a:visited{
   color: #e2e0e0;
   -webkit-text-stroke: 1px black;
